# igdb-api-rust

./: Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/workflows/: publish.yml  rust.yml
src/: apicalypse_builder.rs  client.rs  lib.rs
