[package]
name = "igdb-api-rust"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "API wrappper for IGDB REST API"
repository = "https://github.com/lephyrius/igdb-api-rust"
homepage = "https://github.com/lephyrius/igdb-api-rust"
readme = "README.md"
keywords = ["igdb"]
categories = ["api-bindings"]
include = ["src/**/*", "LICENSE-MIT", "LICENSE-APACHE", "README.md", "build.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = {version = "0.12.1", default-features = false, features = ["std"]}
prost-types = {version = "0.12.1", default-features = false, features = ["std"]}
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls"] }
microjson = "0.1.2"
thiserror = "1"
heck = "0.5.0-rc.1"

[dev-dependencies]
mockito = "1"
tokio = "1"

[build-dependencies]
prost-build = "0.12.1"

[profile.release]
lto = true
